# 4_bit_computer_simulator

./: CMakeLists.txt  README.md
src/: computer.cpp  computer.hpp  main.cpp
